[gd_scene load_steps=5 format=3 uid="uid://4j88gbr62q0w"]

[ext_resource type="Script" path="res://assets/ships/components/object_ui/object_ui.gd" id="1_whbfw"]
[ext_resource type="Texture2D" uid="uid://2fe72k8ma2ku" path="res://assets/ships/components/object_ui/selection.png" id="3_1fsfd"]
[ext_resource type="PackedScene" uid="uid://5i3f5mvvguvp" path="res://assets/ships/components/object_ui/integrity_bar/integrity_bar.tscn" id="3_pubyh"]

[sub_resource type="LabelSettings" id="LabelSettings_uundc"]
line_spacing = 0.0
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="ObjectUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 2
script = ExtResource("1_whbfw")

[node name="Selection" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3_1fsfd")
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="ShieldIntegrityBar" parent="." instance=ExtResource("3_pubyh")]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 12.0
tint_progress = Color(0.231373, 0.580392, 0.819608, 1)

[node name="HullIntegrityBar" parent="." instance=ExtResource("3_pubyh")]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.0
offset_left = 4.0
offset_top = 11.0
offset_right = -4.0
offset_bottom = 20.0
tint_progress = Color(1, 1, 1, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_vertical = 2
text = "name
0 m
0 m/s"
label_settings = SubResource("LabelSettings_uundc")
